tests/purs/failing/MonoKindDataBindingGroup.out
Error found:
in module [33mMain[0m
at tests/purs/failing/MonoKindDataBindingGroup.purs:8:12 - 8:17 (line 8, column 12 - line 8, column 17)

  Could not match kind
  [33m        [0m
  [33m  Symbol[0m
  [33m        [0m
  with kind
  [33m      [0m
  [33m  Type[0m
  [33m      [0m

while checking that type [33m"bad"[0m
  has kind [33mType[0m
while inferring the kind of [33mA "bad"[0m
in type synonym [33mX[0m

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

